# backend-flashcard

./: .gitignore  LICENSE  backend-flashcard.cabal  cabal.sandbox.config
data/: card.db
src/: DB.hs  Main.hs
src/DB/CardSimple/: Model.hs  Queries.hs
src/DB/CardUser/: Model.hs  Queries.hs
src/DB/CardUserSession/: Model.hs  Queries.hs
src/DB/Deck/: Model.hs  Queries.hs
src/Routes/: #DeckRoutes.hs#  CardRoutes.hs  CardUserRoutes.hs  DeckRoutes.hs  SessionRoutes.hs  Utils.hs
