name:                backend-flashcard

version:             0.1.0.0
synopsis:            Flashcard web app

license:             BSD3
license-file:        LICENSE

author:              Patrick Seafield
maintainer:          ppseafield@gmail.com

copyright:  2013, Patrick Seafield.

build-type:          Simple
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.18

data-dir: data/


executable backend-flashcard
  -- main-is:             
  main-is: Main.hs
  
  -- other-modules:       
  -- other-extensions:    
  
  build-depends: base >=4.7 && <5
               , wai
               , warp
               , http-types
               , resourcet
               , transformers
               , scotty
               , time
               , text
               , bytestring
               , aeson
               , postgresql-simple
               , uuid
  
  hs-source-dirs: src
  
  default-language:    Haskell2010

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
